--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section  class="Inicio">
     <div class="texto"> 
-        <h1 class="animate__animated animate__backInDown">Programmers By Day</h1>
+        <h1 class="animate__animated animate__heartBeat">Programmers By Day</h1>
         <h2 class="animate__animated animate__heartBeat">Heroes By Night</h2>
     </div>
 </section> 
