--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <h2 class="">Somos ingenieros, programadores y pesimos en los deportes.</h2>
     <div class="grid-2"> 
         <div>
-            <p>Tenemos más de dos años de experiencia en el desarrollo Web, produciendo experiencias emocionantes para marcas que son tan inteligentes como efectivas.</p>
+            <p class="parrafo">Tenemos más de dos años de experiencia en el desarrollo Web, produciendo experiencias emocionantes para marcas que son tan inteligentes como efectivas.</p>
             <img class="ingenieros" src="img/Engineer Warning Label.jpg" alt="ingenieros">
         </div>
 
