--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div>
             <i class="fab fa-node fa-7x"></i>
-            <p>Desarrollamos de todo tipo de aplicaciones gracias a la plataforma NodeJS, librería de JS.</p>
+            <p>Desarrollamos de todo tipo de aplicaciones gracias a la plataforma NodeJS.</p>
         </div>
 
         <div>
